--- a/README
+++ b/README
@@ -1,3 +1,14 @@
+DISCLAIMER: I am not the author or the owner of all files in this project.
+I added completely fair scheduling, shortest job first scheduling and
+preemptive shortest job first scheduling as a part of the project.
+
+
+Schedulers were implemented using min heaps.
+
+HERE IS THE ORIGINAL README FILE FROM THIS PROJECT:
+
+
+
 xv6 is a re-implementation of Dennis Ritchie's and Ken Thompson's Unix
 Version 6 (v6).  xv6 loosely follows the structure and style of v6,
 but is implemented for a modern RISC-V multiprocessor using ANSI C.
